# usb-autodump

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.sh  LICENSE  README.md  README_SPK.md  SPEC.md  config.json  file_records.db  generate-icon.js  generate-test-videos.js  installer.nsi  license.txt  main.py  main.spec  package.json  test.nsi
.github/workflows/: build-deb.yml  build-windows.yml  build.yml  package.yml  publish-release.yml  release.yml  test.yml
core/: copy_engine.py  disk_tool.py  file_record.py  ftp_uploader.py  process_manager.py  usb_monitor.py
fpk_scripts/: manifest.bak  usb-autodump.fpk
fpk_scripts/app/ui/: config
fpk_scripts/app/web_backend/: requirements.txt
fpk_scripts/app/web_backend/api/: config.py  devices.py
fpk_scripts/app/web_backend/services/: __init__.py  copy_engine_service.py  stats_service.py  ws_manager.py
fpk_scripts/app/web_frontend/: index.html
fpk_scripts/cmd/: main
fpk_scripts/config/: resource
linux_usb/: __init__.py  disk_operations.py  event_monitor.py  requirements_linux.txt  synology_usb.py  usb_detector.py
spk_scripts/: PACKAGE.json  build_spk.sh
spk_scripts/conf/: privilege
spk_scripts/scripts/: installer.sh  setup_env.py  startup.sh  stop.sh  uninstaller.sh
src/: config.cpp  config.h  copy_engine.h  crypto.cpp  crypto.h  disk_ring.cpp  disk_ring.h  disk_space_widget.cpp  disk_space_widget.h  disk_tool.cpp  disk_tool.h  dump_process.cpp  dump_process.h  file_record.cpp  file_record.h  ftp_pool.cpp  ftp_pool.h  ftp_process.cpp  ftp_process.h  log_panel.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  password_dialog.cpp  password_dialog.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  upload_queue.cpp  upload_queue.h  usb_card.cpp  usb_card.h  usb_card.ui  usb_monitor.cpp  usb_monitor.h  win32_icon.rc
ui/: log_panel.py  main_window.py  settings_dialog.py  usb_card.py
utils/: config.py  crypto.py  logger.py  platform_detect.py
web_backend/: main.py  models.py
web_backend/api/: ftp.py  records.py  tasks.py
web_backend/services/: ftp_uploader_service.py  state.py  usb_monitor_service.py
